2020-07-09  Alexey Shvayka  <shvaikalesh@gmail.com>

        ErrorInstance::finishCreation() puts "message" twice, with different attributes
        https://bugs.webkit.org/show_bug.cgi?id=214089

        Reviewed by Yusuke Suzuki.

        * microbenchmarks/error-source-appender.js: Added.

2020-07-07  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] BytecodeGenerator should be robust against failed constant generation
        https://bugs.webkit.org/show_bug.cgi?id=214062
        <rdar://problem/65117916>

        Reviewed by Saam Barati.

        * stress/bigint-oom-in-codegen-array-literal-context.js: Added.
        (shouldThrow):
        (test):
        * stress/bigint-oom-in-codegen-binary-conditional-context.js: Added.
        (shouldThrow):
        (test):
        * stress/bigint-oom-in-codegen-conditional-context.js: Added.
        (shouldThrow):
        (test):

2020-07-07  Yusuke Suzuki  <ysuzuki@apple.com>

        [JSC] Should not pass Exception to JSPromise::reject
        https://bugs.webkit.org/show_bug.cgi?id=214061
        <rdar://problem/65134450>

        Reviewed by Mark Lam.

        * stress/import-exception.js: Added.
        (import.string_appeared_here.then):

2020-07-07  Keith Miller  <keith_miller@apple.com>

        Bytecode UseDef should be aware of checkpoints
        https://bugs.webkit.org/show_bug.cgi?id=213566

        Reviewed by Saam Barati.

        * stress/def-then-use-in-single-bytecode-with-checkpoints-for-of.js: Added.
        (foo):

2020-07-04  Alexey Shvayka  <shvaikalesh@gmail.com>

        %TypedArray%.prototype.{indexOf,lastIndexOf} are not spec-perfect
        https://bugs.webkit.org/show_bug.cgi?id=213715

        Reviewed by Yusuke Suzuki.

        * microbenchmarks/array-prototype-indexOf-empty.js: Added.
        * microbenchmarks/typed-array-indexOf-empty.js: Added.
        * stress/array-indexof-tointeger-order.js: Added.
        * test262/expectations.yaml: Mark 10 test cases as passing.
