@@ -1,4 +1,3 @@
-//@ skip if $architecture == "mips"
 //@ runDefault("--jitPolicyScale=0", "--gcMaxHeapSize=2000")
 
 // This test happened to catch a case where we failed to zero the space in the butterfly before m_lastOffset when reallocating.
