@@ -1,4 +1,4 @@
-//@ skip if ["arm"].include?($architecture)
+//@ skip if ["arm", "mips"].include?($architecture)
 //@ runDefault("--useConcurrentJIT=0", "--thresholdForJITAfterWarmUp=10", "--slowPathAllocsBetweenGCs=10", "--useConcurrentGC=0")
 
 function fullGC() {
