@@ -1,3 +1,14 @@
+2020-07-09  Caio Lima  <ticaiolima@gmail.com>
+
+        [JSC][32-bits] Test gardening July 9th
+        https://bugs.webkit.org/show_bug.cgi?id=214138
+
+        Unreviewed Gardening.
+
+        * stress/array-buffer-view-watchpoint-can-be-fired-in-really-add-in-dfg.js:
+        * stress/butterfly-zero-unused-butterfly-properties.js:
+        * stress/check-stack-overflow-before-value-profiling-arguments.js:
+
 2020-07-09  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         ErrorInstance::finishCreation() puts "message" twice, with different attributes
